Offline developments